validate survey name; spec passing
Co-authored-by: professional-pigeon <professional-pigeon@users.noreply.github.com>

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -21,3 +21,5 @@
 <p><%= link_to "Delete", survey_path(@survey), :data => {:confirm => "You sure?", :method => "delete"} %></p>
 
 <p><%= link_to "Return to surveys", surveys_path %></p>
+
+<%= render "layouts/take_survey" %>
