validate topic, titleize name and topic; spec passing
Co-authored-by: professional-pigeon <professional-pigeon@users.noreply.github.com>

--- a/app/views/layouts/_question_form.html.erb
+++ b/app/views/layouts/_question_form.html.erb
@@ -1,5 +1,7 @@
 <h1>Fill out survey</h1>
 
+<%= render "layouts/errors", :object => @survey %>
+
 <%= form_for [@survey, @question] do |f| %>
   <%= f.label :question %>
   <%= f.text_field :question %>
