add answers route
Co-authored-by: professional-pigeon <professional-pigeon@users.noreply.github.com>

--- a/app/views/layouts/_take_survey.html.erb
+++ b/app/views/layouts/_take_survey.html.erb
@@ -1,6 +1,6 @@
 <%= render "layouts/errors", :object => @survey %>
 
-<form action="/survey/" method="tbd">
+<form action="/surveys/<%= @survey.id %>/answers" method="get">
   <div class="container">
     <% @survey.questions.each do |question| %>
     <div class="row">
