--- a/app/views/surveys/answer.html.erb
+++ b/app/views/surveys/answer.html.erb
@@ -1,4 +1,5 @@
 <h1>Here's your survey answers</h1>
 
 <% @questions.each do |question| %>
-  <p>
+  <p><%= question.question%>: <%= question.answer %></p>
+<% end %>
