add links back to root page
Co-authored-by: professional-pigeon <professional-pigeon@users.noreply.github.com>

--- a/app/views/surveys/answer.html.erb
+++ b/app/views/surveys/answer.html.erb
@@ -3,3 +3,5 @@
 <% @questions.each do |question| %>
   <p><%= question.question%>: <%= question.answer %></p>
 <% end %>
+
+<p><%= link_to "Return to surveys", surveys_path %></p>
