--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,19 +1,19 @@
-/*
+ /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
  *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+ * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
  *
  * You're free to add application-wide styles to this file and they'll appear at the bottom of the
  * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- */
 
-  @import "bootstrap-sprockets";
-  @import "bootstrap";
+ */
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
 
  body {
    background: linear-gradient(144deg, rgb(112, 192, 235), pink);
@@ -21,4 +21,8 @@
    background-repeat:no-repeat;
    background-position-y: bottom;
    min-height: 100vh;
+   padding: 5em;
  }
+#header {
+  text-align: center;
+}
