--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -2,11 +2,9 @@
   <h1>Surveys, Surveys, Surveys!</h1>
   <h2>Luxury Surveys at Discount Prices</h2>
 </div>
-<br>
+<br><br><br>
 <div id="userType">
-  <h2>Are you a:</h2>
-  <h2><span id="surveyAdmin">Survey Administrator</span></h2>
-  <h2><span id="surveyTaker">Survey Taker</span></h2>
+  <h2><span id="surveyAdmin">Survey Admin</span> <span id="surveyTaker">Survey Taker</span></h2>
 </div>
 
 <% if @surveys.any? %>
